--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.0",
+    "@astrojs/netlify": "^5.2.0",
+    "@types/alpinejs": "^3.13.9",
+    "alpinejs": "^3.13.7",
     "astro": "^4.4.0"
   }
 }
