--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/netlify": "^5.2.0",
+    "@astrojs/sitemap": "^3.1.1",
     "@types/alpinejs": "^3.13.9",
     "alpinejs": "^3.13.7",
     "astro": "^4.4.0"
